# pico-gas_detection

./: .gitignore  CMakeLists.txt  gas_leakage_detector.c
connections/: connections.fzz
